--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ All colors MUST be HSL.
 
     --radius: 0rem;
 
-    --glass-bg: 0 0% 100% / 0.6;
+    --glass-bg: 0 0% 100% / 0.45;
     --glass-border: 0 0% 10% / 0.2;
   }
 }
@@ -78,6 +78,47 @@ All colors MUST be HSL.
   .blob-filter {
     /* ensure hardware acceleration */
     will-change: transform, opacity;
+  }
+
+  .blob-rotate-slow {
+    animation: blobRotate 60s linear infinite;
+  }
+
+  .blob-rotate-fast {
+    animation: blobRotate 8s linear infinite;
+    animation-timing-function: ease-in-out;
+  }
+
+  .blob-morph {
+    animation: blobMorph 8s ease-in-out infinite;
+    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;
+  }
+}
+
+@keyframes blobRotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes blobMorph {
+  0% {
+    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;
+  }
+  25% {
+    border-radius: 42% 58% 70% 30% / 45% 65% 35% 55%;
+  }
+  50% {
+    border-radius: 71% 29% 39% 61% / 70% 50% 50% 30%;
+  }
+  75% {
+    border-radius: 35% 65% 48% 52% / 39% 58% 42% 61%;
+  }
+  100% {
+    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;
   }
 }
 
